# RuEstoque

./: README.md
back_end/: README.md  pyproject.toml
back_end/back_end/: app.py
front_end/: README.md  electron-builder.yml  package-lock.json  package.json  tailwind.config.js
front_end/src/main/: index.ts
front_end/src/renderer/src/: App.tsx
front_end/src/renderer/src/assets/: base.css  main.css
