[tool.poetry]
name = "back-end"
version = "0.1.0"
description = ""
authors = ["Giovanny Cordeiro <Giovannycordeiropb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.5"}


[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = "fastapi dev back_end/app.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
